docs(boxes): update alignment

--- a/docs2/2-boxes/2-4.alignments.md
+++ b/docs2/2-boxes/2-4.alignments.md
@@ -4,14 +4,24 @@ In this chapter we'll see how to align text and elements.
 
 ## Content
 
-- [Text Alignment](3.3-alignment.md#text-alignment)
-- [Element Alignment](3.3-alignment.md#element-alignment)
+- [Text Alignment](#text-alignment)
+- [Element Alignment](#element-alignment)
 
 ---
 
 ## Text Alignment
 
 To align text in a certain element we use the `text-align` property.
+
+#### justify
+
+When using `justify`, each line of the text will stretch to the width of the element (except for the last line).
+
+##### start/end
+
+These values make multiple language support easier. When the language is read from left to right `start` will be the
+same as `left`, and `end` will be the same as `right`. When the language is read from right to left `start` will be the
+same as `right`, and `end` will be the same as `left`. Too bad the support of [logical properties](http://caniuse.com/#search=logical) isn't that high.
 
 #### Example
 
@@ -21,25 +31,22 @@ To align text in a certain element we use the `text-align` property.
 }
 ```
 
-* **justify**: when using justify, each line of the text will stretch to the width of the element \(except for the last line\).
-* **start/end**: these values make multiple language support easier. When the language is read from left to right 'start' will be the same as 'left', and 'end' will be the same as 'right'. When the language is read from right to left 'start' will be the same as 'right', and 'end' will be the same as 'left'. Too bad the support of [logical properties](http://caniuse.com/#search=logical) isn't that high.
-
 ---
 
 ## Element Alignment
 
 ### Horizontally
 
-To align an element horizontally we use the 'margin' property.
+To align an element horizontally we use the `margin` property.
 
 #### Align left
 
-An element is by default aligned left, but to complete our examples here is an explicit example.
+An element is by default aligned `left`, but to complete our examples here is an explicit example.
 
 ```css
 .element {
-  margin-right: auto;
-  width: 100px;
+	margin-right: auto;
+	width: 100px;
 }
 ```
 
@@ -47,8 +54,8 @@ An element is by default aligned left, but to complete our examples here is an e
 
 ```css
 .element {
-  margin-left: auto;
-  width: 100px;
+	margin-left: auto;
+	width: 100px;
 }
 ```
 
@@ -56,10 +63,10 @@ An element is by default aligned left, but to complete our examples here is an e
 
 ```css
 .element {
-  margin: 0 auto; /* Shorthand notation */
-  margin-left: auto; /* Full notation */
-  margin-right: auto; /* Full notation */
-  width: 100px;
+	margin: 0 auto; /* Shorthand notation */
+	margin-left: auto; /* Full notation */
+	margin-right: auto; /* Full notation */
+	width: 100px;
 }
 ```
 
@@ -67,11 +74,11 @@ An element is by default aligned left, but to complete our examples here is an e
 
 Well use the HTML markup underneath to create all our examples:
 
-```markup
+```html
 <div class="container">
-  <div class="selector">
-    I'm vertically Centered
-  </div>
+	<div class="selector">
+		I'm vertically Centered
+	</div>
 </div>
 ```
 
@@ -79,19 +86,19 @@ Well use the HTML markup underneath to create all our examples:
 
 The first method we'll take a look at is using a relative position and a tranform. Notice that we specify a top of 50%
 which refers to 50% of the height of the container, and we translate the element on the y-axis with -50% which refers to
-the height of the element itself \(because we're using transform\).
+the height of the element itself (because we're using transform).
 
 #### Example
 
 ```css
 .container {
-  height: 500px;
+	height: 500px;
 }
 
 .selector {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
 }
 ```
 
@@ -104,27 +111,27 @@ container but will align the it's content vertically.
 
 ```css
 .container {
-  display: table;
-  height: 500px;
+	display: table;
+	height: 500px;
 }
 
 .selector {
-  display: table-cell;
-  vertical-align: middle;
+	display: table-cell;
+	vertical-align: middle;
 }
 ```
 
 #### Flexbox magic
 
-The ultimate solution to aligning is flexbox. Flexbox gives us total control of how we want to align and size our elements. We'll go deeper into flexbox in a [later chapter](https://github.com/WartClaes/mjr-css/tree/42d3e6491cc83aa7478e3548ad47b722b68738ab/docs/Chapter-4--Responsive-Grid/4.2-Grid-Systems.md).
+The ultimate solution to aligning is flexbox. Flexbox gives us total control of how we want to align and size our elements.
+We'll go deeper into flexbox in a later chapter.
 
 #### Example
 
 ```css
 .container {
-  align-items: center;
-  display: flex;
-  height: 500px;
+	align-items: center;
+	display: flex;
+	height: 500px;
 }
 ```
-
