docs(boxes): update alignment
s

--- a/docs2/2-boxes/2-4.alignments.md
+++ b/docs2/2-boxes/2-4.alignments.md
@@ -20,8 +20,11 @@ When using `justify`, each line of the text will stretch to the width of the ele
 ##### start/end
 
 These values make multiple language support easier. When the language is read from left to right `start` will be the
-same as `left`, and `end` will be the same as `right`. When the language is read from right to left `start` will be the
-same as `right`, and `end` will be the same as `left`. Too bad the support of [logical properties](http://caniuse.com/#search=logical) isn't that high.
+same as `left`, and `end` will be the same as `right`.
+
+When the language is read from right to left `start` will be the same as `right`, and `end` will be the same as `left`.
+
+Too bad the support of [logical properties](http://caniuse.com/#search=logical) isn't that high.
 
 #### Example
 
