docs(boxes): add box-shadow

--- a/docs2/2-boxes/2-4.alignments.md
+++ b/docs2/2-boxes/2-4.alignments.md
@@ -4,8 +4,8 @@ In this chapter we'll see how to align text and elements.
 
 ## Content
 
-- [Text Alignment](#text-alignment)
-- [Element Alignment](#element-alignment)
+- [Text alignment](#text-alignment)
+- [Element alignment](#element-alignment)
 
 ---
 
