docs(boxes): rename to shadows

--- a/docs2/2-boxes/2-5.shadows.md
+++ b/docs2/2-boxes/2-5.shadows.md
@@ -1,12 +1,10 @@
-# Advanced box styling
+# Shadows
 
-Here we find some extra box styles, mainly used for gold-plating your design.
+Here we find the explanation how to make box-shadows.
 
 ## Content
 
 - [Box shadows](#box-shadows)
-- [Filters](#filters)
-- [Blend modes](#blend-modes)
 
 ---
 
@@ -38,5 +36,17 @@ negative values will cause the shadow to shrink. If not provided, the value is `
 ```css
 .foo {
 	box-shadow: inset 5px 5px 5px 5px rgba(0, 0, 0, .2);
+}
+```
+
+It is possible to define multiple shadows on a single element. The different shadows should be comma seperated.
+
+#### Example
+
+```css
+.foo {
+	box-shadow:
+		-5px -5px 5px rgba(0, 0, 0, .2),
+		5px 5px 5px rgba(0, 0, 0, .2);
 }
 ```
