docs(deep dive): highlight properties

--- a/docs2/5-deep-dive/5.2-pixel-pipeline.md
+++ b/docs2/5-deep-dive/5.2-pixel-pipeline.md
@@ -76,12 +76,12 @@ when updating the DOM or CSSOM (for example via javascript) the entire process h
 
 ### Some examples:
 
-If you change a property that changes the layout of a page such as width, height, margin, ... the browser needs to go
+If you change a property that changes the layout of a page such as `width`, `height`, `margin`, ... the browser needs to go
 through all the steps of the pixel pipeline.
 
 ![cssom](../../assets/pipeline.png)
 
-If you change a paint only property like color, background-color, box-shadow, ... the browser knows it can skip the layout
+If you change a paint only property like `color`, `background-color`, `box-shadow`, ... the browser knows it can skip the layout
 stage. This results in big perfomance win.
 
 ![cssom](../../assets/pipeline-no-layout.png)
