docs(deep dive): fix link

--- a/docs2/5-deep-dive/5.2-pixel-pipeline.md
+++ b/docs2/5-deep-dive/5.2-pixel-pipeline.md
@@ -92,4 +92,4 @@ immediately.
 ![cssom](../../assets/pipeline-no-paint.png)
 
 Knowing which property triggers which step is something you'll learn while doing. A list of the affected steps per
-property can be found at [csstriggers.com] https://csstriggers.com/.
+property can be found at [csstriggers.com](https://csstriggers.com/).
