docs(deep dive): set correct title in Content list

--- a/docs2/5-deep-dive/5.2-pixel-pipeline.md
+++ b/docs2/5-deep-dive/5.2-pixel-pipeline.md
@@ -14,7 +14,7 @@ painting pixels on the screen.
 - [Layout](#layout)
 - [Paint](#paint)
 - [Composite](#composite)
-- [Conclusion](#conclusion)
+- [Performance](#performance)
 
 ---
 
